# CubePlugin

./: CMakeLists.txt  README
analysis/: README  TestRun.mac  analysis.cpp  run.sh
geometry/: CMakeLists.txt  README
geometry/include/: GeoExample.h  cuboDetectorConstruction.h
geometry/src/: GeoExample.cpp  cuboDetectorConstruction.cpp
physicslist/: CMakeLists.txt
physicslist/include/: GiulioOptical.hh  cuboPhysicsList.hh  cuboPhysicsListMessenger.hh
physicslist/src/: GiulioOptical.cc  cuboPhysicsList.cc  cuboPhysicsListMessenger.cc
scoring/: CMakeLists.txt  README  scoring.mac
scoring/include/: HitScoringExample.h  SDScoringExample.h  UAScoringExample.h
scoring/src/: HitScoringExample.cpp  SDScoringExample.cpp  UAScoringExample.cpp
useraction/: CMakeLists.txt  README
useraction/include/: UserActionExample.h
useraction/src/: UserActionExample.cpp
